crates/ty_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Com…_-_Chained_comparisons_…_(c391c13e2abc18a0).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Chained comparisons with objects that don't implement `__bool__` correctly
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NotBoolable:
 2 |     __bool__: int = 3
 3 | 
 4 | class Comparable:
 5 |     def __lt__(self, item) -> NotBoolable:
 6 |         return NotBoolable()
 7 | 
 8 |     def __gt__(self, item) -> NotBoolable:
 9 |         return NotBoolable()
10 | 
11 | # error: [unsupported-bool-conversion]
12 | 10 < Comparable() < 20
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
15 | 
16 | Comparable() < Comparable()  # fine
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is not supported for type `NotBoolable`
  --> src/mdtest_snippet.py:12:1
   |
11 | # error: [unsupported-bool-conversion]
12 | 10 < Comparable() < 20
   | ^^^^^^^^^^^^^^^^^
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
   |
info: `__bool__` on `NotBoolable` must be callable

```

```
error[unsupported-bool-conversion]: Boolean conversion is not supported for type `NotBoolable`
  --> src/mdtest_snippet.py:14:1
   |
12 | 10 < Comparable() < 20
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
   | ^^^^^^^^^^^^^^^^^
15 |
16 | Comparable() < Comparable()  # fine
   |
info: `__bool__` on `NotBoolable` must be callable

```
